--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -178,6 +178,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_down">صفحة لأسفل</string>
     <string name="move_text_one_line_up">نقل النص سطر واحد لأعلى</string>
     <string name="move_text_one_line_down">نقل النص سطر واحد للأسفل</string>
+    <string name="start_new_line_below">بدء سطر جديد أدناه</string>
     <string name="key_pos_1">بداية السطر</string>
     <string name="key_pos_end">نهاية السطر</string>
     <string name="key_pos_1_document">بداية المستند</string>
