--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -178,6 +178,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_down">Volgende pagina</string>
     <string name="move_text_one_line_up">Verplaats tekst één regel omhoog</string>
     <string name="move_text_one_line_down">Verplaats tekst één regel omlaag</string>
+    <string name="start_new_line_below">Start nieuwe regel hieronder</string>
     <string name="key_pos_1">Start lijn (Pos Home)</string>
     <string name="key_pos_end">Eind lijn (Pos End)</string>
     <string name="key_pos_1_document">Document Start</string>
