[ci skip] Crowdin translation bot: New translations for Russian

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -178,6 +178,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_down">Листать вниз (Page Down)</string>
     <string name="move_text_one_line_up">Переместить текст на строку вверх</string>
     <string name="move_text_one_line_down">Переместить текст на строку вниз</string>
+    <string name="start_new_line_below">Начать новую строку ниже</string>
     <string name="key_pos_1">Начало строки (Home)</string>
     <string name="key_pos_end">Конец строки (End)</string>
     <string name="key_pos_1_document">Начало документа</string>
