--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -178,6 +178,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_down">Pagină în jos (Pagina Jos)</string>
     <string name="move_text_one_line_up">Mutați textul cu o linie în sus</string>
     <string name="move_text_one_line_down">Mutați textul cu o linie în jos</string>
+    <string name="start_new_line_below">Pornește linia nouă de mai jos</string>
     <string name="key_pos_1">Pornire linie (Paca pos)</string>
     <string name="key_pos_end">Sfârșit linie (Pos Sfârșit)</string>
     <string name="key_pos_1_document">Pornire document</string>
