--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -178,6 +178,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_down">Página seguinte (Page Down)</string>
     <string name="move_text_one_line_up">Mova o texto uma linha a cima</string>
     <string name="move_text_one_line_down">Mova o texto uma linha abaixo</string>
+    <string name="start_new_line_below">Iniciar nova linha abaixo</string>
     <string name="key_pos_1">Início da linha (Pos Home)</string>
     <string name="key_pos_end">Fim da linha (Pos End)</string>
     <string name="key_pos_1_document">Início do documento</string>
