--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -178,6 +178,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_down">Side ned (Page Down)</string>
     <string name="move_text_one_line_up">Flyt tekst en linje op</string>
     <string name="move_text_one_line_down">Flyt tekst en linje ned</string>
+    <string name="start_new_line_below">Start ny linje nedenfor</string>
     <string name="key_pos_1">Liniestart (Pos Home)</string>
     <string name="key_pos_end">Linieendelse (Pos End)</string>
     <string name="key_pos_1_document">Dokumentstart</string>
@@ -366,6 +367,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="essential">Væsentlig</string>
     <string name="append_human_readable_uuid_to_new_tasks">Tilføj læsbar UUUID til nye opgaver</string>
     <string name="action_order">Handlings rækkefølge</string>
+    <string name="toggle_action_visibility">Slå synlighed for handling til</string>
     <string name="load_default_settings">Indlæs standardindstillinger</string>
     <string name="drag">Træk</string>
     <string name="file_encryption_password">Fil kryptering adgangskode</string>
