--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -178,6 +178,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_down">Volgende pagina</string>
     <string name="move_text_one_line_up">Verplaats tekst één regel omhoog</string>
     <string name="move_text_one_line_down">Verplaats tekst één regel omlaag</string>
+    <string name="start_new_line_below">Start nieuwe regel hieronder</string>
     <string name="key_pos_1">Start lijn (Pos Home)</string>
     <string name="key_pos_end">Eind lijn (Pos End)</string>
     <string name="key_pos_1_document">Document Start</string>
@@ -366,6 +367,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="essential">Essentieel</string>
     <string name="append_human_readable_uuid_to_new_tasks">Mensen leesbare UUID toevoegen aan nieuwe taken</string>
     <string name="action_order">Actie bestelling</string>
+    <string name="toggle_action_visibility">Actie zichtbaarheid in-/uitschakelen</string>
     <string name="load_default_settings">Laad standaardinstellingen</string>
     <string name="drag">Sleep</string>
     <string name="file_encryption_password">Wachtwoord voor bestandsversleuteling</string>
