--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -178,6 +178,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_down">Листать вниз (Page Down)</string>
     <string name="move_text_one_line_up">Переместить текст на строку вверх</string>
     <string name="move_text_one_line_down">Переместить текст на строку вниз</string>
+    <string name="start_new_line_below">Начать новую строку ниже</string>
     <string name="key_pos_1">Начало строки (Home)</string>
     <string name="key_pos_end">Конец строки (End)</string>
     <string name="key_pos_1_document">Начало документа</string>
@@ -366,6 +367,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="essential">Основное</string>
     <string name="append_human_readable_uuid_to_new_tasks">Добавить пользовательский UUID к новым задачам</string>
     <string name="action_order">Порядок действий</string>
+    <string name="toggle_action_visibility">Вкл/выкл видимость действия</string>
     <string name="load_default_settings">Загрузить настройки по умолчанию</string>
     <string name="drag">Перетащите</string>
     <string name="file_encryption_password">Пароль шифрования файла</string>
