--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -178,6 +178,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_down">Sayfa Aşağı (Page Down)</string>
     <string name="move_text_one_line_up">Metni bir satır yukarı taşı</string>
     <string name="move_text_one_line_down">Metni bir satır aşağı taşı</string>
+    <string name="start_new_line_below">Aşağıda yeni satıra başla</string>
     <string name="key_pos_1">Satır Başlangıcı (Pos Home)</string>
     <string name="key_pos_end">Satır Sonu (Pos End)</string>
     <string name="key_pos_1_document">Belge Başlangıcı</string>
