[ci skip] Crowdin translation bot: New translations for Catalan

--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -178,6 +178,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_down">Pàgina següent (Page Down)</string>
     <string name="move_text_one_line_up">Mou el text una línia cap amunt</string>
     <string name="move_text_one_line_down">Mou el text una línia cap avall</string>
+    <string name="start_new_line_below">Comença una nova línia a continuació</string>
     <string name="key_pos_1">Inici de línia (Pos Home)</string>
     <string name="key_pos_end">Final de línia (Pos End)</string>
     <string name="key_pos_1_document">Inici del documento</string>
