--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -163,6 +163,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">Sorvégi szóközök kiemelése, ha legalább kettő van</string>
     <string name="use_monospace_for_code">Kódhoz azonos szélességű betűtípus használata</string>
     <string name="disable_code_block_highlight">Kódtömbök kiemelésének kikapcsolása</string>
+    <string name="auto_renumber_ordered_list">Listák automatikus számozása</string>
     <string name="auto_renumber_ordered_list_slowdown">Ez az opció befolyásolhatja az app teljesítményét.</string>
     <string name="use_different_fonttype_slow_down">Másik betűtípus használata. Dinamikus megváltoztatása hatással van a teljesítményre.</string>
     <string name="general">Általános</string>
@@ -223,6 +224,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="disable_spelling_underline">Helyesírás-ellenőrzés kikapcsolása</string>
     <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">Billentyűzetjavaslatok maradnak, piros aláhúzás eltűnik</string>
     <string name="location">Hely</string>
+    <string name="text_characters">Szöveges karakterek</string>
     <string name="directory">Mappa</string>
     <string name="recently_viewed_documents">Nemrég megnyitott dokumentumok</string>
     <string name="details">Részletek</string>
@@ -335,6 +337,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="strikeout">Áthúzott</string>
     <string name="inline_code">Kód beszúrása</string>
     <string name="horizontal_line">Vízszintes vonal</string>
+    <string name="toggle_done">Teljesítve</string>
     <string name="link_color">Hivatkozás színe</string>
     <string name="add_context">Kontextus hozzáadása</string>
     <string name="archive_completed_tasks">Befejezett feladatok archiválása</string>
@@ -354,4 +357,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">Fájl dekódolása nem sikerült. Rossz jelszót használtál? Biztos, hogy a fájl titkosítva van a Markor AES titkosításával?</string>
     <string name="password_already_set_setting_a_new_password_will_overwrite">Már van jelszó beállítva. Új jelszó megadása az előzőt felülírja, és nem biztos hogy hozzá fogsz majd férni az eddig mentett fájlokhoz, ha elfelejted a jelszót.</string>
     <string name="code_block">Kódtömb</string>
+    <string name="add_completion_date">Teljesítés dátuma</string>
+    <string name="add_completion_date_for_todos_when_marking_them_as_done">A teljesítés dátumának beszúrása amikor késznek vannak jelölve</string>
 </resources>
